# packages

./: .travis.yml  gen-travis-yml.py  local_upload.sh  travis_build.sh  travis_packages.sh
.travis.d/: build.sh  prepare.sh
box2d/: VITABUILD
bzip2/: VITABUILD
curl/: VITABUILD
curlpp/: VITABUILD
expat/: VITABUILD
ffmpeg/: VITABUILD  ffmpeg.patch
fftw/: VITABUILD
flac/: VITABUILD
fnblit/: VITABUILD
freetype/: VITABUILD
glfw/: VITABUILD
glm/: VITABUILD
imgui/: VITABUILD  imgui.patch
jansson/: VITABUILD
jsoncpp/: VITABUILD
lame/: VITABUILD
libShellAudio/: VITABUILD
libarchive/: VITABUILD
libbaremetal/: VITABUILD  libbaremetal.patch
libconfig/: VITABUILD
libexif/: VITABUILD
libftpvita/: VITABUILD  libftpvita.patch
libjpeg-turbo/: VITABUILD
libk/: VITABUILD
libmad/: VITABUILD  libmad.patch
libmathneon/: VITABUILD  libmathneon.patch
libmikmod/: VITABUILD  libmikmod.patch
libmodplug/: VITABUILD
libmpeg2/: VITABUILD
libogg/: VITABUILD
libpib/: VITABUILD
libpng/: VITABUILD
libsndfile/: VITABUILD  libsndfile.patch
libsodium/: VITABUILD
libtheora/: VITABUILD
libtremor/: VITABUILD
libvita2d/: VITABUILD  libvita2d.patch
libvita2d_sys/: VITABUILD  dolcesdk.patch  libvita2d_sys.patch
libvitaSAS/: VITABUILD  dolcesdk.patch
libvorbis/: VITABUILD
libxml2/: VITABUILD
libzip/: VITABUILD
minizip/: VITABUILD
mpg123/: VITABUILD  mpg123.patch
onigmo/: VITABUILD
openssl/: VITABUILD  openssl.patch
opus/: VITABUILD
physfs/: VITABUILD
pixman/: VITABUILD
psp2dbg/: VITABUILD
quirc/: Makefile.vita
sdl/: VITABUILD  sdl.patch
sdl2/: VITABUILD  sdl2.patch
sdl2_image/: CMakeLists.txt  VITABUILD  dolcesdk.patch
sdl2_mixer/: CMakeLists.txt  VITABUILD  dolcesdk.patch
sdl2_net/: VITABUILD  dolcesdk.patch
sdl2_ttf/: CMakeLists.txt  VITABUILD  dolcesdk.patch
sdl_image/: CMakeLists.txt  VITABUILD
sdl_mixer/: CMakeLists.txt  VITABUILD  dolcesdk.patch
sdl_net/: VITABUILD  dolcesdk.patch
sdl_ttf/: CMakeLists.txt  VITABUILD
soloud/: VITABUILD  soloud.patch
speexdsp/: VITABUILD
taihen/: VITABUILD
taipool/: VITABUILD  taipool.patch
unrar/: VITABUILD  unrar.patch
unrar/patches/: 0001-vita.patch
vitaGL/: VITABUILD  vitagl.patch
xz/: VITABUILD
yaml-cpp/: VITABUILD
